feat: add subgraphs tab to SharedNodeMenu
